  bring up a new window containing the contents of a file in its
  original or new form, you can also set the popup display to be a
  coloured diff, containing the contents of the original and the new
  file side by side (similar to the main screen in coloured diff
  mode).  While this mode is more bandwidth intensive, this can also
  aid considerably in the reviewing process.

* Support for "diff -uNp", "diff -uN --show-function-line=regexp",
  "cvs diff -uNp" and "cvs diff -uN  --show-function-line=regexp".

* URLs entered in the description or in a comment will be rendered as
  a link to that URL.

* Allow the bug field to accept multiple bug IDs.

* Introduced codestriker.conf, which isolates a site's configuration
  into a single file.  This simplifies upgrading.

Version 1.4.2:

* Can now handle diffs which end in: "\ No newline at end of file".

* Changed the HTML generation for popup windows displaying old/new
  versions of a file to use <PRE> rather than a table, which cuts down
  the loading time considerably.  Note, the codestriker.css file had
  to be changed.

Version 1.4.1:

* Popup windows were not resizable in IE due to a bug in the
  javascript code.  Has now been fixed.

Version 1.4:

* Clicking on an original diff block line heading will open a popup
  window displaying colour-coded contents of the original file.
  Clicking on a new diff block line heading will open a popup window
  displaying colour-coded contents of the new file.  In each case, it
  is possible to click on topic lines to enter comments, which are
  done in the main browser window.

* The file names for each file block is now optionally hyperlinked to
  a CVS viewing system, such as cvs web.

* An optional bug number field is now a part of the topic creation
  form.  This is displayed in the view topic screen, with a link to
  the appropriate bug tracking (eg bugzilla) page.  Text within the
  description of the form "[Bb][Uu][Gg]\s*\d+" is also rendered to the