@@ -50,6 +50,11 @@ $default_topic_create_mode = $NORMAL_MODE;
 #$ENV{'CVS_RSH'} = "ssh -i /var/www/codestriker/identity";
 #$ENV{'CVS_RSH'} = "ssh";
 
+# Default width of tabs.  Most developers expect this to be 8, but
+# some expect to see 4.  This is also stored in the user's cookie, and
+# can be changed dynamically on the view topic screen.
+$default_tabwidth = 8;
+
 # Don't allow posts larger than 500K.
 $CGI::POST_MAX=1024 * 500;
 
